ventana de LogIn 1

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -119,11 +119,12 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:background="@android:color/white"
         android:text="Button"
         android:textColor="#334D6B"
         android:textColorHighlight="@android:color/white"
-        tools:layout_editor_absoluteX="213dp"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
         tools:layout_editor_absoluteY="578dp" />
 
 </android.support.constraint.ConstraintLayout>
