--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -59,7 +59,7 @@
         app:srcCompat="@drawable/ic_usuariologo" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/editTextContraseña"
         android:layout_width="307dp"
         android:layout_height="50dp"
         android:layout_marginTop="24dp"
@@ -78,9 +78,9 @@
         android:layout_width="19dp"
         android:layout_height="21dp"
         android:layout_marginStart="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editText2"
-        app:layout_constraintStart_toStartOf="@+id/editText2"
-        app:layout_constraintTop_toTopOf="@+id/editText2"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextContraseña"
+        app:layout_constraintStart_toStartOf="@+id/editTextContraseña"
+        app:layout_constraintTop_toTopOf="@+id/editTextContraseña"
         app:layout_constraintVertical_bias="0.586"
         app:srcCompat="@drawable/ic_candado" />
 
@@ -92,39 +92,37 @@
         android:layout_marginTop="12dp"
         android:text="Recuerdame"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextContraseña" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonlogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:background="@drawable/ic_fondolleno"
         android:text="INGRESAR"
         android:textColor="@color/colorAccent"
-        app:layout_constraintEnd_toEndOf="@+id/editText2"
-        app:layout_constraintStart_toStartOf="@+id/editText2"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintEnd_toEndOf="@+id/editTextContraseña"
+        app:layout_constraintStart_toStartOf="@+id/editTextContraseña"
+        app:layout_constraintTop_toBottomOf="@+id/editTextContraseña" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="¿No tienes cuenta?"
+        android:textColor="@android:color/black"
+        tools:layout_editor_absoluteX="91dp"
+        tools:layout_editor_absoluteY="642dp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="196dp"
+        android:layout_height="23dp"
         android:text="¿Olvidaste tu contraseña? "
         android:textColor="@android:color/black"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="592dp" />
+        tools:layout_editor_absoluteX="72dp"
+        tools:layout_editor_absoluteY="610dp" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:background="@android:color/white"
-        android:text="Button"
-        android:textColor="#334D6B"
-        android:textColorHighlight="@android:color/white"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
-        tools:layout_editor_absoluteY="578dp" />
 
 </android.support.constraint.ConstraintLayout>
