--- a/app/src/main/res/layout/activity_recuperar_cuenta.xml
+++ b/app/src/main/res/layout/activity_recuperar_cuenta.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".RecuperarCuentaActivity">
 
+    <Button
+        android:id="@+id/buttonlogin2"
+        android:layout_width="343dp"
+        android:layout_height="44dp"
+        android:background="@drawable/ic_fondolleno"
+        android:text="ENVIAR"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintEnd_toEndOf="@+id/editTextCorreo2"
+        app:layout_constraintStart_toStartOf="@+id/editTextCorreo2"
+        tools:layout_editor_absoluteY="552dp" />
+
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="21dp"
@@ -60,11 +71,12 @@
         android:id="@+id/textView5"
         android:layout_width="204dp"
         android:layout_height="44dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="28dp"
         android:text="Ingresa tu correo electronico"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/editTextCorreo2"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="@+id/editTextCorreo2"
         app:layout_constraintTop_toBottomOf="@+id/editTextCorreo2"
         tools:text="Enviaremos un mensaje a este correo con su nueva contraseña" />
