--- a/app/src/main/res/layout/activity_recuperar_cuenta.xml
+++ b/app/src/main/res/layout/activity_recuperar_cuenta.xml
@@ -7,7 +7,7 @@
     tools:context=".RecuperarCuentaActivity">
 
     <Button
-        android:id="@+id/buttonlogin2"
+        android:id="@+id/buttonEnviar"
         android:layout_width="343dp"
         android:layout_height="44dp"
         android:background="@drawable/ic_fondolleno"
