--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    tools:context=".EditarPerfil">
     <TextView
         android:id="@+id/linea8"
         android:layout_width="0dp"
@@ -264,6 +263,5 @@
         app:layout_constraintEnd_toEndOf="@+id/editTextCambiarLugarOrigen"
         app:layout_constraintStart_toStartOf="@+id/editTextCambiarLugarOrigen"
         app:layout_constraintTop_toBottomOf="@+id/editTextCambiarLugarOrigen" />
-
 
 </android.support.constraint.ConstraintLayout>
