--- a/app/src/main/res/layout/pop_up_confirmacion_cuenta.xml
+++ b/app/src/main/res/layout/pop_up_confirmacion_cuenta.xml
@@ -12,6 +12,7 @@
 
     >
     <ImageView
+        android:id="@+id/close_pop_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_flecha_back"
@@ -22,7 +23,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app1:cardBackgroundColor="@color/colorPrimary"
+        app1:cardBackgroundColor=""
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -46,6 +47,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/titulo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -57,6 +59,7 @@
                 />
 
             <TextView
+                android:id="@+id/descripcion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
