--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -89,10 +89,10 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="-10dp"
         android:layout_marginTop="12dp"
         android:text="Recuerdame"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/editTextContraseña"
         app:layout_constraintTop_toBottomOf="@+id/editTextContraseña" />
 
     <Button
@@ -111,19 +111,22 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="¿No tienes cuenta?"
         android:textColor="@android:color/black"
-        tools:layout_editor_absoluteX="91dp"
-        tools:layout_editor_absoluteY="642dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:layout_editor_absoluteX="91dp" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="164dp"
         android:layout_height="23dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="140dp"
         android:text="¿Olvidaste tu contraseña? "
         android:textColor="@android:color/black"
-        tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="610dp" />
+        app:layout_constraintStart_toStartOf="@+id/buttonlogin"
+        app:layout_constraintTop_toBottomOf="@+id/buttonlogin" />
 
     <Button
         android:id="@+id/BtnRecuperarCuenta"
