--- a/app/src/main/res/layout/pop_up_confirmacion_cuenta.xml
+++ b/app/src/main/res/layout/pop_up_confirmacion_cuenta.xml
@@ -23,7 +23,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app1:cardBackgroundColor=""
+
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -86,7 +86,7 @@
 
 
 
-                
+
 
             <Button
                 android:layout_width="match_parent"
@@ -104,7 +104,7 @@
 
 
 
-        </>
+        </LinearLayout>
 
 
     </android.support.v7.widget.CardView>
