--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -9,13 +9,14 @@
 
     <TextView
         android:id="@+id/textViewSesion"
-        android:layout_width="107dp"
-        android:layout_height="25dp"
+        android:layout_width="130dp"
+        android:layout_height="27dp"
         android:layout_marginTop="60dp"
         android:background="@color/colorAccent"
         android:text="Iniciar sesion"
         android:textColor="@android:color/black"
         android:textSize="18sp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@+id/imageView5"
         app:layout_constraintStart_toStartOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
@@ -24,16 +25,14 @@
         android:id="@+id/textViewUsuario"
         android:layout_width="307dp"
         android:layout_height="50dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:background="@drawable/ic_cuadro"
         android:hint="Nombre de Usuario"
         android:paddingLeft="50dp"
         android:paddingTop="12dp"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textViewSesion"
+        app:layout_constraintStart_toStartOf="@+id/textViewSesion"
         app:layout_constraintTop_toBottomOf="@+id/textViewSesion" />
 
     <ImageView
@@ -121,8 +120,7 @@
         android:id="@+id/textView2"
         android:layout_width="164dp"
         android:layout_height="23dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="32dp"
         android:text="¿Olvidaste tu contraseña? "
         android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="@+id/buttonlogin"
