--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -2,10 +2,11 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/Usuario"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LogInActivity"
-    android:background="#ffff">
+    android:background="@drawable/ic_cuadrado"
+    tools:context=".LogInActivity">
 
     <TextView
         android:id="@+id/textViewSesion"
@@ -14,26 +15,13 @@
         android:layout_marginTop="60dp"
         android:background="@color/colorAccent"
         android:text="Iniciar sesion"
+        android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@+id/imageView5"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="@+id/imageView5"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
-
-    <TextView
-        android:id="@+id/textViewUsuario"
-        android:layout_width="307dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/ic_cuadro"
-        android:hint="Nombre de Usuario"
-        android:paddingLeft="50dp"
-        android:paddingTop="12dp"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/textViewSesion"
-        app:layout_constraintStart_toStartOf="@+id/textViewSesion"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSesion" />
 
     <ImageView
         android:id="@+id/imageView5"
@@ -52,26 +40,26 @@
         android:layout_width="19dp"
         android:layout_height="21dp"
         android:layout_marginStart="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewUsuario"
-        app:layout_constraintStart_toStartOf="@+id/textViewUsuario"
-        app:layout_constraintTop_toTopOf="@+id/textViewUsuario"
-        app:layout_constraintVertical_bias="0.517"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/editText2"
+        app:layout_constraintStart_toStartOf="@+id/editText2"
+        app:layout_constraintTop_toTopOf="@+id/editText2"
+        app:layout_constraintVertical_bias="0.586"
         app:srcCompat="@drawable/ic_usuariologo" />
 
     <EditText
         android:id="@+id/editTextContraseña"
         android:layout_width="307dp"
         android:layout_height="50dp"
-        android:layout_marginTop="24dp"
         android:background="@drawable/ic_cuadro"
         android:ems="10"
         android:hint="Contraseña"
         android:inputType="textPassword"
         android:paddingLeft="50dp"
         android:paddingTop="4dp"
-        app:layout_constraintEnd_toEndOf="@+id/textViewUsuario"
-        app:layout_constraintStart_toStartOf="@+id/textViewUsuario"
-        app:layout_constraintTop_toBottomOf="@+id/textViewUsuario" />
+        app:layout_constraintEnd_toEndOf="@+id/editText2"
+        app:layout_constraintStart_toStartOf="@+id/editText2"
+        tools:layout_editor_absoluteY="319dp" />
 
     <ImageView
         android:id="@+id/imageView7"
@@ -110,17 +98,19 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:text="¿No tienes cuenta?"
         android:textColor="@android:color/black"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_editor_absoluteX="91dp" />
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="164dp"
         android:layout_height="23dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
         android:text="¿Olvidaste tu contraseña? "
         android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="@+id/buttonlogin"
@@ -129,15 +119,29 @@
     <Button
         android:id="@+id/BtnRecuperarCuenta"
         style="?android:attr/borderlessButtonStyle"
-        android:layout_width="128dp"
-        android:layout_height="22dp"
+        android:layout_width="130dp"
+        android:layout_height="25dp"
         android:layout_marginStart="2dp"
         android:background="#ffff"
         android:text="Recuperala aqui"
+        android:textColor="#334B68"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="@+id/textView2"
-        android:textColor="#334B68"/>
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="307dp"
+        android:layout_height="50dp"
+        android:background="@drawable/ic_cuadro"
+        android:ems="10"
+        android:hint="Nombre de Usuario"
+        android:inputType="textPersonName"
+        android:paddingLeft="50dp
+"
+        app:layout_constraintEnd_toEndOf="@+id/textViewSesion"
+        app:layout_constraintStart_toStartOf="@+id/textViewSesion"
+        tools:layout_editor_absoluteY="252dp" />
 
 
 </android.support.constraint.ConstraintLayout>
