--- a/app/src/main/res/layout/activity_recuperar_cuenta.xml
+++ b/app/src/main/res/layout/activity_recuperar_cuenta.xml
@@ -13,8 +13,7 @@
         android:background="@drawable/ic_fondolleno"
         android:text="ENVIAR"
         android:textColor="@color/colorAccent"
-        app:layout_constraintEnd_toEndOf="@+id/editTextCorreo2"
-        app:layout_constraintStart_toStartOf="@+id/editTextCorreo2"
+        tools:layout_editor_absoluteX="34dp"
         tools:layout_editor_absoluteY="552dp" />
 
     <ImageView
@@ -22,26 +21,11 @@
         android:layout_width="21dp"
         android:layout_height="21dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextCorreo2"
-        app:layout_constraintStart_toStartOf="@+id/editTextCorreo2"
-        app:layout_constraintTop_toTopOf="@+id/editTextCorreo2"
-        app:layout_constraintVertical_bias="0.517"
+        app:layout_constraintBottom_toBottomOf="@+id/editText3"
+        app:layout_constraintStart_toStartOf="@+id/editText3"
+        app:layout_constraintTop_toTopOf="@+id/editText3"
+        app:layout_constraintVertical_bias="0.551"
         app:srcCompat="@drawable/ic_correo" />
-
-    <EditText
-        android:id="@+id/editTextCorreo2"
-        android:layout_width="345dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/ic_cuadrado"
-        android:ems="10"
-        android:hint="Correo electronico"
-        android:inputType="textEmailAddress"
-        android:paddingLeft="50dp"
-        android:paddingTop="0dp"
-        app:layout_constraintEnd_toEndOf="@+id/textView4"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -71,14 +55,23 @@
         android:id="@+id/textView5"
         android:layout_width="204dp"
         android:layout_height="44dp"
-        android:layout_marginTop="28dp"
         android:text="Ingresa tu correo electronico"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/editTextCorreo2"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="@+id/editTextCorreo2"
-        app:layout_constraintTop_toBottomOf="@+id/editTextCorreo2"
+        tools:layout_editor_absoluteX="103dp"
+        tools:layout_editor_absoluteY="380dp"
         tools:text="Enviaremos un mensaje a este correo con su nueva contraseña" />
+
+    <EditText
+        android:id="@+id/editText3"
+        android:layout_width="345dp"
+        android:layout_height="50dp"
+        android:background="@drawable/ic_cuadrado"
+        android:ems="10"
+        android:hint="Correo electronico"
+        android:inputType="textPersonName"
+        android:paddingLeft="50dp"
+        tools:layout_editor_absoluteX="32dp"
+        tools:layout_editor_absoluteY="303dp" />
 
 </android.support.constraint.ConstraintLayout>
