--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,6 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".RegisterActivity">
 
+    <EditText
+        android:id="@+id/textUsuario2"
+        android:layout_width="307dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/ic_cuadro"
+        android:ems="10"
+        android:hint="Nombre de Usuario"
+        android:inputType="textPersonName"
+        android:paddingLeft="50dp
+"
+        app:layout_constraintEnd_toEndOf="@+id/textViewSesion4"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="@+id/textViewSesion4"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSesion4" />
+
     <Button
         android:id="@+id/buttonCancelar"
         android:layout_width="121dp"
@@ -33,16 +49,15 @@
         android:id="@+id/editTextContraseña"
         android:layout_width="307dp"
         android:layout_height="50dp"
-        android:layout_marginTop="16dp"
         android:background="@drawable/ic_cuadro"
         android:ems="10"
         android:hint="Contraseña"
         android:inputType="textPassword"
         android:paddingLeft="50dp"
         android:paddingTop="4dp"
-        app:layout_constraintEnd_toEndOf="@+id/Usuario"
-        app:layout_constraintStart_toStartOf="@+id/Usuario"
-        app:layout_constraintTop_toBottomOf="@+id/Usuario" />
+        app:layout_constraintEnd_toEndOf="@+id/textUsuario2"
+        app:layout_constraintStart_toStartOf="@+id/textUsuario2"
+        tools:layout_editor_absoluteY="301dp" />
 
     <EditText
         android:id="@+id/editTextContraseña2"
@@ -59,42 +74,25 @@
         app:layout_constraintStart_toStartOf="@+id/editTextContraseña"
         app:layout_constraintTop_toBottomOf="@+id/editTextContraseña" />
 
-    <TextView
-        android:id="@+id/Usuario"
-        android:layout_width="307dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/ic_cuadro"
-        android:hint="Nombre de Usuario"
-        android:paddingLeft="50dp"
-        android:paddingTop="12dp"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.375"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewSesion4" />
-
     <ImageView
         android:id="@+id/icono"
         android:layout_width="19dp"
         android:layout_height="21dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/Usuario"
-        app:layout_constraintStart_toStartOf="@+id/Usuario"
-        app:layout_constraintTop_toTopOf="@+id/Usuario"
-        app:layout_constraintVertical_bias="0.517"
-        app:srcCompat="@drawable/ic_usuariologo" />
+        app:layout_constraintBottom_toBottomOf="@+id/textUsuario2"
+        app:layout_constraintTop_toTopOf="@+id/textUsuario2"
+        app:layout_constraintVertical_bias="0.586"
+        app:srcCompat="@drawable/ic_usuariologo"
+        tools:layout_editor_absoluteX="68dp" />
 
     <TextView
         android:id="@+id/textViewSesion4"
-        android:layout_width="100dp"
-        android:layout_height="27dp"
+        android:layout_width="101dp"
+        android:layout_height="26dp"
         android:layout_marginTop="42dp"
         android:background="@color/colorAccent"
         android:paddingLeft="10dp"
         android:text="Registrate"
+        android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView8"
@@ -126,7 +124,8 @@
         android:paddingTop="0dp"
         app:layout_constraintEnd_toEndOf="@+id/editTextContraseña2"
         app:layout_constraintStart_toStartOf="@+id/editTextContraseña2"
-        app:layout_constraintTop_toBottomOf="@+id/editTextContraseña2" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextContraseña2"
+        />
 
     <ImageView
         android:id="@+id/candado"
