--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -50,6 +50,7 @@
         android:id="@+id/editTextContraseña"
         android:layout_width="307dp"
         android:layout_height="50dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/ic_cuadro"
         android:ems="10"
         android:hint="Contraseña"
@@ -58,7 +59,7 @@
         android:paddingTop="4dp"
         app:layout_constraintEnd_toEndOf="@+id/textUsuario"
         app:layout_constraintStart_toStartOf="@+id/textUsuario"
-        tools:layout_editor_absoluteY="319dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textUsuario" />
 
     <ImageView
         android:id="@+id/imageView7"
@@ -132,15 +133,19 @@
         android:id="@+id/textUsuario"
         android:layout_width="307dp"
         android:layout_height="50dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/ic_cuadro"
         android:ems="10"
         android:hint="Nombre de Usuario"
         android:inputType="textPersonName"
-        android:paddingLeft="50dp
+        android:paddingLeft="50dp"
+        app:layout_constraintEnd_toEndOf="@+id/textViewSesion"
+        app:layout_constraintStart_toStartOf="@+id/textViewSesion"
+        app:layout_constraintTop_toBottomOf="@+id/textViewSesion" />
 "
         app:layout_constraintEnd_toEndOf="@+id/textViewSesion"
         app:layout_constraintStart_toStartOf="@+id/textViewSesion"
-        tools:layout_editor_absoluteY="252dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewSesion" />
 
 
 </android.support.constraint.ConstraintLayout>
