--- a/app/src/main/res/layout/activity_recuperar_cuenta.xml
+++ b/app/src/main/res/layout/activity_recuperar_cuenta.xml
@@ -10,11 +10,13 @@
         android:id="@+id/buttonEnviar"
         android:layout_width="343dp"
         android:layout_height="44dp"
+        android:layout_marginTop="52dp"
         android:background="@drawable/ic_fondolleno"
         android:text="ENVIAR"
         android:textColor="@color/colorAccent"
-        tools:layout_editor_absoluteX="34dp"
-        tools:layout_editor_absoluteY="552dp" />
+        app:layout_constraintEnd_toEndOf="@+id/textView5"
+        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -53,25 +55,30 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="204dp"
-        android:layout_height="44dp"
-        android:text="Ingresa tu correo electronico"
+        android:layout_width="245dp"
+        android:layout_height="62dp"
+        android:layout_marginTop="24dp"
+        android:text="Enviaremos un mensaje a este correo con su nueva contraseña"
+        android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        tools:layout_editor_absoluteX="103dp"
-        tools:layout_editor_absoluteY="380dp"
+        app:layout_constraintEnd_toEndOf="@+id/editText3"
+        app:layout_constraintStart_toStartOf="@+id/editText3"
+        app:layout_constraintTop_toBottomOf="@+id/editText3"
         tools:text="Enviaremos un mensaje a este correo con su nueva contraseña" />
 
     <EditText
         android:id="@+id/editText3"
         android:layout_width="345dp"
         android:layout_height="50dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/ic_cuadrado"
         android:ems="10"
         android:hint="Correo electronico"
         android:inputType="textPersonName"
         android:paddingLeft="50dp"
-        tools:layout_editor_absoluteX="32dp"
-        tools:layout_editor_absoluteY="303dp" />
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
 </android.support.constraint.ConstraintLayout>
